# nextion-uploader

./: .clang-format  CMakeLists.txt  LICENSE  README.md
.github/workflows/: cmake.yml  linux.yml
include/: nextionuploader.hpp
src/: main.cpp  nextionuploader.cpp
